fixes for a better layout on mobile

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -126,14 +126,75 @@ body {
 }
 
 .project-name {
-    padding: 40px 0 10px 20px;
+    padding: 40px 0 10px 0;
 }
 
 .project-name-col {
     text-align: left;
+    margin: 0 0 0 10px;
 }
 
 .task-name {
     padding: 0 0 0 40px;
     text-align: left;
+}
+
+@media screen and (max-width: 3200px) {
+    .project-name {
+        font-size: 18px;
+    }
+
+    .task-name {
+        font-size: 16px;
+    }
+
+    .select-date {
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width: 1600px) {
+    .project-name {
+        font-size: 16px;
+    }
+
+    .task-name {
+        font-size: 14px;
+    }
+
+    .select-date {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .project-name {
+        font-size: 14px;
+    }
+
+    .task-name {
+        font-size: 12px;
+    }
+
+    .select-date {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .project-name {
+        font-size: 13px;
+    }
+
+    .task-name {
+        font-size: 11px;
+    }
+
+    .select-date {
+        font-size: 15px;
+    }
+
+    .pomo-togglable-row {
+        font-size: 11px;
+    }
 }
